--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
+    "ahooks": "^2.9.4",
     "animejs": "^3.2.1",
     "husky": "^4.3.7",
     "lint-staged": "^10.5.3",
