--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "npm:dart-sass"
+    "node-sass": "npm:sass"
   },
   "husky": {
     "hooks": {
